# access-python

./: LICENSE  README.md  pyproject.toml  tox.ini
src/uplink/: __init__.py  access.py
src/uplink/common/: __init__.py  base58.py  paths.py  rpc.py  storj.py
src/uplink/common/encryption/: __init__.py  aesgcm.py  encryption.py  path.py  secretbox.py  store.py
src/uplink/common/grant/: __init__.py  access.py  encryptionaccess.py  permission.py  shareprefix.py
src/uplink/common/macaroon/: __init__.py  apikey.py  caveat.py  macaroon.py  types.proto  types_pb2.py  types_pb2.pyi
src/uplink/common/pb/: encryption_access.proto  encryption_access_pb2.py  encryption_access_pb2.pyi  encryption_pb2.py  encryption_pb2.pyi  scope.proto  scope_pb2.py  scope_pb2.pyi
src/uplink/edge/: __init__.py  access.py
src/uplink/scripts/: access_permission.py  location.py  main.py  paramtypes.py
tests/: test_examples.py
tests/uplink/common/: test_examples.py
tests/uplink/common/encryption/: test_path.py  test_store.py
tests/uplink/common/grant/: test_access.py  test_restrict.py
