[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "access"
dynamic = ["version"]
description = "Storj access management library and script"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "Click",
    "base58",
    "protobuf >= 4.25",
    "pycryptodome",
    "pynacl",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["storj", "access"]
requires-python = ">=3.11"

[project.urls]
Homepage = "https://storj.io"
GitHub = "https://github.com/storj/access-python"

[project.scripts]
access = 'uplink.scripts.main:main'

[project.optional-dependencies]
dev = [
    "black >=22.3.0",
    "mypy-protobuf >=3.5.0"
]
test = [
    "pytest >=7",
    "tox",
]

[tool.black]
extend-exclude = '.*_pb2.py'

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
